# pbmpm-bevy

./: Cargo.toml  Readme.md  mise.toml
.hooks/: pre-commit
assets/scenes/: sillyRubber.json
crates/pbmpm-bevy/: Cargo.toml
crates/pbmpm-bevy/src/: gpu.rs  interface.rs  lib.rs  params.rs  shape.rs  time_regulation.rs
crates/pbmpm-bevy/src/simulation/: gpu_state.rs  mod.rs  node.rs  shaders.rs
crates/pbmpm-bevy/src/simulation/shaders/: bukkit_allocate.wgsl  bukkit_count.wgsl  common.wgsl  g2p2g.wgsl  particle_emit.wgsl  particle_render.wgsl
src/: json_shape.rs  main.rs  mouse_input.rs  scene.rs  shape_editor.rs  time_regulation.rs  types.rs  ui.rs
src/simulation/: gpu_state.rs  mod.rs  node.rs  shaders.rs
src/simulation/shaders/: bukkit_insert.wgsl  common.wgsl  g2p2g.wgsl  set_indirect_args.wgsl
